news_success.log
  File "/workspaces/TimesUserProfilingCumAdRecommendation/train_news_pretrained_model.py", line 115
    )
    ^
SyntaxError: positional argument follows keyword argument
